--- a/src/app/features/workflow/workflow.component.scss
+++ b/src/app/features/workflow/workflow.component.scss
@@ -689,7 +689,6 @@ $section-padding-mobile: 64px 20px;
   max-width: $content-max;
   margin: 0 auto;
   width: 100%;
-  padding-right: 48px;
 }
 
 .files-grid {
@@ -798,6 +797,10 @@ $section-padding-mobile: 64px 20px;
 
   .node-card {
     padding: 20px 24px;
+  }
+
+  .file-card {
+    padding: 20px;
   }
 }
 
